# medinovai-governance-engine

./: .gitignore  AUDIT_TRAIL.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  claude-progress.txt  docker-compose.yml  feature_list.json  init.sh  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: checkpoint.md  compliance-check.md  end-session.md  init-verify.md  start-session.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260330_0001_initial_governance_schema.py
src/: temporal_worker.py
src/api/: __init__.py  app.py  deps.py  temporal_client.py
src/api/routes/: dua.py  governance_routes.py  health.py  query.py
src/db/: __init__.py  connection.py  models.py  repository.py
src/governance/: __init__.py  activity_context.py  constants.py  dua_manager.py  policy_engine.py  query_activities.py  query_workflow.py  risk_scorer.py
src/integration/: __init__.py  connector_framework.py  evidence_store.py
